--- a/online_Shop_Bahar/package.json
+++ b/online_Shop_Bahar/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^2.10.10",
     "react-bootstrap-icons": "^1.11.6",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.9.4",
     "swiper": "^12.0.2"
   },
   "devDependencies": {
