--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "@tiptap/extension-placeholder": "^3.14.0",
-    "@tiptap/react": "^3.14.0",
+    "@tiptap/react": "^3.15.3",
     "@tiptap/starter-kit": "^3.14.0",
+    "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
